--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "author": "Patrick Massie",
   "devDependencies": {
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-browserify": "^0.5.1",
     "gulp-coffee": "^3.0.2",
+    "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.1",
     "gulp-util": "^3.0.8",
     "jquery": "^3.3.1",
